--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -7,37 +7,38 @@
     <ul>
       <li>
         <input type="checkbox">
-        <a href="show.html">Make the curriculum</a>
+        <a href="show/1">Make the curriculum</a>
         <span class="pomodoro-estimate">4 pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
+        <a href="show/2">Buy workshop supplies</a>
         Buy workshop supplies
         <span class="pomodoro-estimate">3 Pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
-        Meet with the volunteer trainers
+        <a href="show/3">Meet with the volunteer trainers</a>
         <span class="pomodoro-estimate">2 Pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
-        Order food for Saturday and Sunday
+        <a href="show/4">order the food for saturday and sunday</a>
         <span class="pomodoro-estimate">1 Pomodoro</span>
       </li>
       <li>
         <input type="checkbox">
-        Check pre-work assignments
+        <a href="show/5">Check pre-work assignments</a>
         <span class="pomodoro-estimate">2 Pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
-        Send workshop location to all the students
+        <a href="show/6> Send workshop location to all the students</a>
         <span class="pomodoro-estimate">1 Pomodoro</span>
       </li>
       <li>
         <input type="checkbox">
-        Have a great workshop
+        <a href="show/7/">Have a great workshop</a>
         <span class="pomodoro-estimate">0 Pomodoros</span>
       </li>
     </ul>
@@ -69,3 +70,4 @@
       <a href="index.html" class="simple-link">Go back...</a>
     </div>
   </body>
+  
