--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -33,8 +33,8 @@
       </li>
       <li>
         <input type="checkbox">
-        <a href="show/6> Send workshop location to all the students</a>
-        <span class="pomodoro-estimate">1 Pomodoro</span>
+        <a href="show/6"> Send workshop location to all the students</a>
+        <span class="pomodoro-estimate"> 1 Pomodoro</span>
       </li>
       <li>
         <input type="checkbox">
